--- a/components/layouts/Header.module.scss
+++ b/components/layouts/Header.module.scss
@@ -1,9 +1,9 @@
 .header {
   position: sticky;
   top: 0;
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eee;
   z-index: 1000;
-  background-color: #FFFFFF;
+  background-color: #fff;
   height: 100px;
 }
 
