--- a/scss/_next.scss
+++ b/scss/_next.scss
@@ -1,13 +1,9 @@
 // フォントの設定
-$next_regular: "Satoshi",
-'Noto Sans JP',
-sans-serif;
-$next_bold: "Satoshi",
-'Noto Sans JP',
-sans-serif;
+$next_regular: "Satoshi", "Noto Sans JP", sans-serif;
+$next_bold: "Satoshi", "Noto Sans JP", sans-serif;
+$darkgray: #111;
+$white: #fff;
 
-$darkgray: #111111;
-$white: #ffffff;
 // スコアボードの色を変更したい場合、下記を変更してください
 $next_maincolor: $darkgray;
 $next_subcolor: $white;
@@ -15,26 +11,27 @@ $next_subcolor: $white;
 // フォントの太さの設定（ライトウェイト）
 @mixin next_regularWeight {
   font-family: $next_regular;
-  font-variation-settings: 'wght'400;
+  font-variation-settings: "wght" 400;
   font-weight: 400;
 }
 
 // フォントの太さの設定（ミディアムウェイト）
 @mixin next_mediumWeight {
   font-family: $next_regular;
-  font-variation-settings: 'wght'500;
+  font-variation-settings: "wght" 500;
   font-weight: 500;
 }
 
 // フォントの太さの設定（ボールドウェイト）
 @mixin next_boldWeight {
   font-family: $next_bold;
-  font-variation-settings: 'wght'900;
+  font-variation-settings: "wght" 900;
   font-weight: 900;
 }
 
 #nextnow {
   @include next_mediumWeight;
+
   width: 220px;
   height: 80px;
   font-size: 52px;
@@ -59,6 +56,7 @@ $next_subcolor: $white;
 
 @mixin next_statusText {
   @include next_boldWeight;
+
   width: 320px;
   margin: 0;
   color: $next_subcolor;
@@ -77,6 +75,7 @@ $next_subcolor: $white;
 // スコアの設定
 @mixin next_scoreText {
   @include next_boldWeight;
+
   margin: 0;
   width: 60px;
   color: $next_maincolor;
@@ -88,12 +87,14 @@ $next_subcolor: $white;
 // スコアの位置指定
 #next_scoreleft {
   @include next_scoreText;
+
   left: 380px;
   top: 983px;
 }
 
 #next_scoreright {
   @include next_scoreText;
+
   left: 460px;
   top: 983px;
 }
@@ -134,6 +135,7 @@ $next_subcolor: $white;
 
 #localsetting {
   @include next_mediumWeight;
+
   font-size: 24px;
   line-height: 26px;
   position: fixed;
@@ -145,6 +147,7 @@ $next_subcolor: $white;
 
 #localtime {
   @include next_boldWeight;
+
   font-size: 52px;
   text-align: right;
   color: $next_subcolor;
@@ -213,6 +216,7 @@ $next_subcolor: $white;
 #id_three,
 #id_four {
   @include next_mcidText;
+
   position: fixed;
   top: 777px;
   left: 300px;
