--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,13 @@
-@import 'dual';
-@import 'single';
-@import 'solid';
-@import 'simple';
-@import 'next';
-@import 'nextsimple';
-@import 'bracketsimple';
+@import "dual";
+@import "single";
+@import "solid";
+@import "simple";
+@import "next";
+@import "nextsimple";
+@import "bracketsimple";
 
 html {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgb(0 0 0 / 0%);
 }
 
 .board {
