--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,16 @@
 :root {
   --black: #202025;
-  --gray: #C4C4C4;
-  --white: #ffffff;
-  --primary: #CCB280;
+  --gray: #c4c4c4;
+  --white: #fff;
+  --primary: #ccb280;
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: var(--black);
   font-size: 12px;
 }
@@ -25,7 +25,7 @@ a {
 }
 
 html {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgb(0 0 0 / 0%);
 }
 
 h2 {
@@ -53,23 +53,27 @@ hr {
   opacity: 1;
 }
 
-.fade-enter  {
+.fade-enter {
   opacity: 0;
   transform: translateX(-100%);
 }
-.fade-enter-active  {
+
+.fade-enter-active {
   opacity: 1;
   transform: translateX(0%);
 }
-.fade-exit  {
+
+.fade-exit {
   opacity: 1;
   transform: translateX(0%);
 }
-.fade-exit-active  {
+
+.fade-exit-active {
   opacity: 0;
   transform: translateX(100%);
 }
-.fade-enter-active ,
-.fade-exit-active  {
+
+.fade-enter-active,
+.fade-exit-active {
   transition: opacity 500ms, transform 500ms;
 }
