--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,12 @@
   --gray: #c4c4c4;
   --white: #fff;
   --primary: #ccb280;
+  --light-primary: #eedfc2;
+  --bb-black: #202025;
+  --bb-beige: #ccb280;
+  --bb-gray: #86868f;
+  --bb-light: #eee;
+  --bb-white: #fff;
 }
 
 html,
@@ -38,10 +44,6 @@ h3 {
 
 h4 {
   font-size: 1.25rem;
-}
-
-hr {
-  background-color: var(--gray);
 }
 
 .board {
