デザインを実装

--- a/components/parts/NumberForm.module.scss
+++ b/components/parts/NumberForm.module.scss
@@ -5,6 +5,8 @@
 
 .input {
   height: 30px;
+  width: 100%;
+  padding: 5px 10px;
   border: 1px solid var(--light-primary);
   border-radius: 5px;
 }
