--- a/components/parts/TextboxWithCopy.module.scss
+++ b/components/parts/TextboxWithCopy.module.scss
@@ -1,8 +1,13 @@
 .container {
+  display: flex;
   position: relative;
 }
 
 .text {
+  height: 30px;
+  width: 100%;
+  border: 1px solid var(--light-primary);
+  padding: 5px 10px;
   border-radius: 5px 0 0 5px;
   border-right: none;
 }
@@ -10,6 +15,7 @@
 .button {
   position: relative;
   height: 30px;
+  width: 48px;
   left: -5px;
   font-size: 12px;
   border: none;
