--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,9 @@
+/* stylelint-disable */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* stylelint-enable */
+
 :root {
   --black: #202025;
   --gray: #c4c4c4;
