--- a/components/parts/TextboxWithCopy.module.scss
+++ b/components/parts/TextboxWithCopy.module.scss
@@ -22,4 +22,33 @@
   border-radius: 5px;
   background-color: var(--bb-beige);
   color: var(--bb-black);
+
+  &:hover {
+    background-color: var(--bb-beige-hover);
+  }
+}
+
+.copiedPopup {
+  display: none;
+  position: absolute;
+  padding: 8px;
+  left: -6px;
+  top: -40px;
+  background-color: var(--bb-black);
+  font-size: 8px;
+  color: var(--bb-white);
+  z-index: 1;
+  border-radius: 5px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: calc(50% - 6px);
+    top: 100%;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid var(--bb-black);
+  }
 }
