ボタン名を変更

--- a/components/parts/Button.module.scss
+++ b/components/parts/Button.module.scss
@@ -1,8 +1,8 @@
 .button {
-  font-size: 14px;
-  padding: 6px 15px;
-  color: var(--black);
-  background-color: var(--primary);
-  border-radius: 15px;
+  font-size: 11px;
+  padding: 10px;
+  color: var(--bb-white);
+  background-color: var(--bb-black);
+  border-radius: 5px;
   border: none;
 }
