--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,7 @@
   --light-primary: #eedfc2;
   --bb-black: #202025;
   --bb-beige: #ccb280;
+  --bb-beige-hover: #eedfc2;
   --bb-gray: #86868f;
   --bb-light: #eee;
   --bb-white: #fff;
