--- a/components/create/parts/LogoUploader.module.scss
+++ b/components/create/parts/LogoUploader.module.scss
@@ -1,16 +1,64 @@
-
 .container {
-  div {
+  position: relative;
+
+  .cross {
     height: 120px;
     width: 142px;
-    margin-bottom: 10px;
-    background-color: #F2EADB;
+    background: none;
+    border: 1px solid var(--light-primary);
     border-radius: 5px;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 1px;
+      height: 40px;
+      background: var(--light-primary);
+      position: absolute;
+      left: 50%;
+      top: 40px;
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      height: 1px;
+      width: 40px;
+      background: var(--light-primary);
+      position: absolute;
+      left: 51px;
+      top: 50%;
+    }
+
+    .label {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      display: block;
+    }
   }
 
-  button {
-    color: var(--white);
-    background-color: var(--black);
-    border-radius: 5px;
+  .input {
+    display: none;
   }
+}
+
+.image {
+  object-fit: contain;
+  height: 120px;
+  width: 142px;
+  border-radius: 5px;
+  border: 1px solid var(--light-primary);
+}
+
+.deleteButton {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: var(--white);
+  color: var(--black);
+  border-radius: 5px;
+  padding: 3px;
+  font-size: 10px;
+  border: 1px solid var(--primary);
 }
