--- a/components/control/panels/kesu.module.scss
+++ b/components/control/panels/kesu.module.scss
@@ -15,3 +15,28 @@
     width: 20px;
   }
 }
+
+.popup {
+  display: none;
+  position: absolute;
+  padding: 8px;
+  left: 55px;
+  top: -8px;
+  background-color: var(--bb-black);
+  font-size: 8px;
+  color: var(--bb-white);
+  z-index: 1;
+  border-radius: 5px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: calc(50% - 6px);
+    top: 100%;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid var(--bb-black);
+  }
+}
