--- a/components/create/parts/Preview.module.scss
+++ b/components/create/parts/Preview.module.scss
@@ -1,6 +1,6 @@
 .previewContainer {
   background-color: #202025;
-  padding: 130px 30px 30px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,24 +14,6 @@
 
     padding: 15px 0;
     position: relative;
-
-    > span {
-      background-color: #fff !important;
-
-      > span {
-        background-color: rgb(0 0 0 / 10%) !important;
-      }
-    }
-
-    .outer {
-      > span {
-        background-color: #fff !important;
-
-        > span {
-          background-color: rgb(0 0 0 / 10%) !important;
-        }
-      }
-    }
   }
 
   button {
