--- a/components/obs/bracket/BracketBox.module.scss
+++ b/components/obs/bracket/BracketBox.module.scss
@@ -9,6 +9,15 @@ $white: #fff;
 $maincolor: $darkgray;
 $subcolor: $white;
 
+.board {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.95;
+}
+
 // フォントの太さの設定（ライトウェイト）
 @mixin regularWeight {
   font-family: $regular;
