--- a/components/parts/SelectForm.module.scss
+++ b/components/parts/SelectForm.module.scss
@@ -37,7 +37,7 @@
     position: relative;
   }
 
-  option {
+  .input {
     height: 30px;
     padding: 5px 10px;
     border: 1px solid var(--light-primary);
