--- a/components/create/parts/Preview.module.scss
+++ b/components/create/parts/Preview.module.scss
@@ -1,22 +1,27 @@
-.previewContainer {
-  background-color: #202025;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: sticky;
-  top: 0;
+.container {
+  margin-top: -100px;
 
-  .previewImageContainer {
-    &:nth-of-type(1) {
-      padding-top: 0;
+  .previewContainer {
+    background-color: #202025;
+    padding: 30px;
+    padding-top: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: sticky;
+    top: 0;
+
+    .previewImageContainer {
+      &:nth-of-type(1) {
+        padding-top: 0;
+      }
+
+      padding: 15px 0;
+      position: relative;
     }
 
-    padding: 15px 0;
-    position: relative;
-  }
-
-  button {
-    width: 100%;
+    button {
+      width: 100%;
+    }
   }
 }
