--- a/components/control/panels/kesu.module.scss
+++ b/components/control/panels/kesu.module.scss
@@ -4,21 +4,23 @@
   padding: 8px;
   left: 55px;
   top: -8px;
-  background-color: var(--bb-black);
-  font-size: 8px;
-  color: var(--bb-white);
+  background-color: var(--bb-white);
+  border: 1px solid var(--bb-beige);
+  font-size: 10px;
+  color: var(--bb-beige);
   z-index: 1;
   border-radius: 5px;
+  box-shadow: 0 2px 7px rgb(0 0 0 / 10%);
 
-  &::before {
-    content: "";
-    position: absolute;
-    left: calc(50% - 6px);
-    top: 100%;
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid var(--bb-black);
-  }
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   left: calc(50% - 6px);
+  //   top: 100%;
+  //   width: 0;
+  //   height: 0;
+  //   border-left: 6px solid transparent;
+  //   border-right: 6px solid transparent;
+  //   border-top: 6px solid var(--bb-black);
+  // }
 }
