--- a/components/control/parts/ControlPanel.module.scss
+++ b/components/control/parts/ControlPanel.module.scss
@@ -2,6 +2,8 @@
   padding: 15px;
   border: 1px solid var(--bb-beige);
   border-radius: 15px;
+  transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+  box-shadow: 0 2px 7px rgb(0 0 0 / 10%);
 
   details summary::after {
     content: "";
@@ -14,16 +16,35 @@
     top: 40px;
     right: 55px;
     transform: rotate(45deg);
-    transition-duration: 0.5s;
+    transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
   }
 
   details[open] summary::after {
     transform: translateY(15px) rotate(225deg);
   }
 
+  details summary::before {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 32px;
+    right: 40px;
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+  }
+
   summary {
     list-style: none;
     position: relative;
+    cursor: pointer;
+
+    &:hover {
+      &::before {
+        background-color: var(--bb-beige-light);
+      }
+    }
 
     &::marker {
       display: none;
