--- a/components/layouts/Header.module.scss
+++ b/components/layouts/Header.module.scss
@@ -33,8 +33,19 @@
 .createLink {
   font-size: 14px;
   margin: 30px 15px;
-  padding: 6px 15px;
+  padding: 8px 15px;
   color: var(--black);
   background-color: var(--primary);
   border-radius: 15px;
+  transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+
+  &:hover {
+    background-color: var(--bb-beige-hover);
+    box-shadow: 0 3px 10px rgb(0 0 0 / 15%);
+  }
+
+  &:active {
+    background-color: var(--bb-beige-dark);
+    box-shadow: none;
+  }
 }
