--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,8 @@
   --bb-black: #202025;
   --bb-beige: #ccb280;
   --bb-beige-hover: #eedfc2;
+  --bb-beige-light: #faf6f0;
+  --bb-beige-dark: #bb9f69;
   --bb-gray: #86868f;
   --bb-light: #eee;
   --bb-white: #fff;
@@ -52,6 +54,10 @@ h3 {
 
 h4 {
   font-size: 1.25rem;
+}
+
+::selection {
+  background-color: var(--bb-beige);
 }
 
 .board {
