--- a/components/create/parts/BigCheckBox.module.scss
+++ b/components/create/parts/BigCheckBox.module.scss
@@ -9,8 +9,16 @@
   position: relative;
   width: 30px;
   height: 30px;
-  border: 1px solid var(--light-primary);
+  border: 2px solid var(--bb-gray);
   border-radius: 5px;
+  transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+  cursor: pointer;
+  margin-top: 4px;
+
+  &:hover {
+    border-color: var(--bb-black);
+    box-shadow: 0 2px 7px rgb(0 0 0 / 10%);
+  }
 }
 
 .input {
@@ -24,12 +32,12 @@
     &::after {
       content: "";
       position: absolute;
-      width: 8px;
+      width: 12px;
       height: 20px;
       border-right: 2px solid var(--bb-white);
       border-bottom: 2px solid var(--bb-white);
-      top: 2px;
-      left: 10px;
+      top: 0;
+      left: 7px;
       transform: rotate(45deg);
     }
   }
