--- a/components/create/settingForms/IntegrateStartGG.module.scss
+++ b/components/create/settingForms/IntegrateStartGG.module.scss
@@ -19,8 +19,15 @@
       width: 100%;
       max-width: 700px;
       height: 30px;
+      padding: 5px 10px;
       border: 1px solid var(--light-primary);
       border-radius: 5px;
+      transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+
+      &:focus {
+        outline: none;
+        border-color: var(--bb-beige);
+      }
     }
   }
 }
