フォントを設定

--- a/components/control/panels/kesu.module.scss
+++ b/components/control/panels/kesu.module.scss
@@ -7,6 +7,7 @@
   background-color: var(--bb-white);
   border: 1px solid var(--bb-beige);
   font-size: 10px;
+  font-family: "Mint Grotesk Medium", TazuganeInfoStdN-Medium, sans-serif;
   color: var(--bb-beige);
   z-index: 1;
   border-radius: 5px;
