--- a/components/control/parts/ControlPanel.module.scss
+++ b/components/control/parts/ControlPanel.module.scss
@@ -53,6 +53,7 @@
     .title {
       font-size: 24px;
       margin-bottom: 20px;
+      font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Heavy, sans-serif;
     }
 
     .url {
