--- a/components/layouts/Header.module.scss
+++ b/components/layouts/Header.module.scss
@@ -32,6 +32,7 @@
 
 .createLink {
   font-size: 14px;
+  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Bold, sans-serif;
   margin: 30px 15px;
   padding: 8px 15px;
   color: var(--black);
