--- a/components/parts/Button.module.scss
+++ b/components/parts/Button.module.scss
@@ -1,6 +1,7 @@
 .button {
-  font-size: 11px;
-  padding: 10px;
+  font-size: 12px;
+  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Bold, sans-serif;
+  padding: 8px 12px;
   color: var(--bb-white);
   background-color: var(--bb-black);
   border-radius: 5px;
