--- a/components/parts/SelectForm.module.scss
+++ b/components/parts/SelectForm.module.scss
@@ -38,6 +38,7 @@
   }
 
   .input {
+    font-family: "Mint Grotesk Regular", sans-serif;
     height: 30px;
     padding: 5px 10px;
     border: 1px solid var(--light-primary);
