--- a/components/parts/PrimaryButton.module.scss
+++ b/components/parts/PrimaryButton.module.scss
@@ -1,6 +1,7 @@
 .button {
   height: 40px;
   font-size: 14px;
+  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Bold, sans-serif;
   padding: 6px 15px;
   color: var(--black);
   background-color: var(--primary);
