--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 /* stylelint-enable */
+@font-face {
+  font-family: "Mint Grotesk Regular";
+  src: url("/fonts/MintGroteskV12-Regular.woff2");
+}
+
+@font-face {
+  font-family: "Mint Grotesk Medium";
+  src: url("/fonts/MintGroteskV12-Medium.woff2");
+}
+
+@font-face {
+  font-family: "Mint Grotesk Bold";
+  src: url("/fonts/MintGroteskV12-Bold.woff2");
+}
 
 :root {
   --dark-gray: #111;
@@ -25,8 +40,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Mint Grotesk Regular", TazuganeInfoStdN-Book, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: var(--black);
   font-size: 12px;
 }
@@ -46,14 +62,17 @@ html {
 
 h2 {
   font-size: 4rem;
+  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Heavy, sans-serif;
 }
 
 h3 {
   font-size: 2.6rem;
+  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Heavy, sans-serif;
 }
 
 h4 {
   font-size: 1.25rem;
+  font-family: "Mint Grotesk Medium", TazuganeInfoStdN-Medium, sans-serif;
 }
 
 ::selection {
