--- a/components/create/parts/Preview.module.scss
+++ b/components/create/parts/Preview.module.scss
@@ -1,10 +1,13 @@
 .container {
   margin-top: -100px;
 
+  @media (max-width: 520px) {
+    display: none;
+  }
+
   .previewContainer {
     background-color: #202025;
-    padding: 30px;
-    padding-top: 130px;
+    padding: 130px 30px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
