--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,11 +40,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Mint Grotesk Regular", TazuganeInfoStdN-Book, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Noto Sans JP", "Mint Grotesk Regular", TazuganeInfoStdN-Book,
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: var(--black);
-  font-size: 12px;
+  font-size: 62.5%;
 }
 
 a {
@@ -61,18 +61,41 @@ html {
 }
 
 h2 {
-  font-size: 4rem;
-  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Heavy, sans-serif;
+  font-size: 4.8rem;
+  font-family: "Noto Sans JP", "Mint Grotesk Bold", TazuganeInfoStdN-Heavy,
+    sans-serif;
+
+  @media (max-width: 520px) {
+    font-size: 2.7rem;
+  }
 }
 
 h3 {
-  font-size: 2.6rem;
-  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Heavy, sans-serif;
+  font-size: 3.2rem;
+  font-family: "Noto Sans JP", "Mint Grotesk Bold", TazuganeInfoStdN-Heavy,
+    sans-serif;
+
+  @media (max-width: 520px) {
+    font-size: 1.8rem;
+  }
 }
 
 h4 {
-  font-size: 1.25rem;
-  font-family: "Mint Grotesk Medium", TazuganeInfoStdN-Medium, sans-serif;
+  font-size: 1.5rem;
+  font-family: "Noto Sans JP", "Mint Grotesk Medium", TazuganeInfoStdN-Medium,
+    sans-serif;
+
+  @media (max-width: 520px) {
+    font-size: 1.4rem;
+  }
+}
+
+p,
+div,
+span {
+  font-size: 1.2rem;
+  font-family: "Noto Sans JP", "Mint Grotesk Medium", TazuganeInfoStdN-Medium,
+    sans-serif;
 }
 
 ::selection {
@@ -107,6 +130,14 @@ h4 {
 .fade-enter-active,
 .fade-exit-active {
   transition: opacity 300ms;
+}
+
+.markdown {
+  margin: 20px 48px;
+
+  @media (max-width: 520px) {
+    margin: 20px;
+  }
 }
 
 .markdown ol {
