--- a/components/parts/PrimaryButton.module.scss
+++ b/components/parts/PrimaryButton.module.scss
@@ -19,3 +19,49 @@
     box-shadow: none;
   }
 }
+
+.light {
+  background-color: var(--bb-white);
+  border: 1px solid var(--bb-beige);
+
+  &:hover {
+    background-color: var(--bb-beige-hover);
+  }
+
+  &:active {
+    background-color: var(--bb-beige-active);
+  }
+}
+
+.container {
+  position: relative;
+}
+
+.popup {
+  display: none;
+  position: absolute;
+  padding: 8px;
+  left: 50%;
+  top: -50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--bb-white);
+  border: 1px solid var(--bb-beige);
+  font-size: 10px;
+  font-family: "Mint Grotesk Medium", TazuganeInfoStdN-Medium, sans-serif;
+  color: var(--bb-beige);
+  z-index: 1;
+  border-radius: 5px;
+  box-shadow: 0 2px 7px rgb(0 0 0 / 10%);
+
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   left: calc(50% - 6px);
+  //   top: 100%;
+  //   width: 0;
+  //   height: 0;
+  //   border-left: 6px solid transparent;
+  //   border-right: 6px solid transparent;
+  //   border-top: 6px solid var(--bb-black);
+  // }
+}
