--- a/components/parts/PrimaryButton.module.scss
+++ b/components/parts/PrimaryButton.module.scss
@@ -37,8 +37,7 @@
   position: relative;
 }
 
-.popup {
-  display: none;
+.tooltip {
   position: absolute;
   padding: 8px;
   left: 50%;
@@ -52,16 +51,11 @@
   z-index: 1;
   border-radius: 5px;
   box-shadow: 0 2px 7px rgb(0 0 0 / 10%);
+  transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+}
 
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   left: calc(50% - 6px);
-  //   top: 100%;
-  //   width: 0;
-  //   height: 0;
-  //   border-left: 6px solid transparent;
-  //   border-right: 6px solid transparent;
-  //   border-top: 6px solid var(--bb-black);
-  // }
+.tooltipEnter,
+.tooltipExit {
+  transform: translate(-50%, calc(-50% + 10px));
+  opacity: 0;
 }
