--- a/components/create/parts/Preview.module.scss
+++ b/components/create/parts/Preview.module.scss
@@ -1,5 +1,6 @@
 .container {
   margin-top: -100px;
+  width: fit-content;
 
   @media (max-width: 520px) {
     display: none;
@@ -13,6 +14,9 @@
     align-items: center;
     position: sticky;
     top: 0;
+    right: 0;
+    width: 400px;
+    max-width: 50vw;
 
     .previewImageContainer {
       &:nth-of-type(1) {
