--- a/pages/create.module.scss
+++ b/pages/create.module.scss
@@ -1,10 +1,6 @@
 .container {
-  display: grid;
-  grid-template-columns: 1fr 400px;
-
-  @media (max-width: 520px) {
-    grid-template-columns: 1fr;
-  }
+  display: flex;
+  justify-content: space-between;
 
   hr {
     background-color: var(--gray);
