フォントを変更、ラウンドセレクタをスタイリング

--- a/components/control/parts/ControlPanel.module.scss
+++ b/components/control/parts/ControlPanel.module.scss
@@ -71,6 +71,8 @@
     .title {
       font-size: 2.4rem;
       margin-bottom: 20px;
+      font-family: "Mint Grotesk Bold", "Zen Kaku Gothic Antique", sans-serif;
+      font-weight: 900;
 
       @media (max-width: 520px) {
         font-size: 2.1rem;
