--- a/components/control/parts/StreamQueueTable.module.scss
+++ b/components/control/parts/StreamQueueTable.module.scss
@@ -4,7 +4,8 @@
 
   th {
     text-align: left;
-    font-family: "Mint Grotesk Medium", TazuganeInfoStdN-Medium, sans-serif;
+    font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
+    font-weight: 700;
     border-bottom: 1px solid var(--bb-beige);
     padding: 2px 25px;
   }
