--- a/components/layouts/Header.module.scss
+++ b/components/layouts/Header.module.scss
@@ -60,7 +60,8 @@
 
 .createLink {
   font-size: 14px;
-  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Bold, sans-serif;
+  font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 700;
   margin: 30px 15px;
   padding: 8px 15px;
   color: var(--black);
