--- a/components/parts/Button.module.scss
+++ b/components/parts/Button.module.scss
@@ -1,6 +1,7 @@
 .button {
   font-size: 12px;
-  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Bold, sans-serif;
+  font-family: "Mint Grotesk Bold", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 700;
   padding: 8px 12px;
   color: var(--bb-white);
   background-color: var(--bb-black);
