--- a/components/parts/SmallButton.module.scss
+++ b/components/parts/SmallButton.module.scss
@@ -1,6 +1,7 @@
 .button {
   font-size: 12px;
-  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Bold, sans-serif;
+  font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 700;
   padding: 5px 10px;
   color: var(--bb-black);
   background-color: var(--bb-beige);
