--- a/components/parts/TextboxWithCopy.module.scss
+++ b/components/parts/TextboxWithCopy.module.scss
@@ -23,7 +23,8 @@
   width: 48px;
   left: -5px;
   font-size: 12px;
-  font-family: "Mint Grotesk Bold", TazuganeInfoStdN-Bold, sans-serif;
+  font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 700;
   border: none;
   border-radius: 5px;
   background-color: var(--bb-beige);
