--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,9 +40,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Noto Sans JP", "Mint Grotesk Regular", TazuganeInfoStdN-Book,
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-    Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Mint Grotesk Regular", "Zen Kaku Gothic Antique", -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: var(--black);
   font-size: 62.5%;
 }
@@ -62,8 +62,8 @@ html {
 
 h2 {
   font-size: 4.8rem;
-  font-family: "Noto Sans JP", "Mint Grotesk Bold", TazuganeInfoStdN-Heavy,
-    sans-serif;
+  font-family: "Mint Grotesk Bold", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 900;
 
   @media (max-width: 520px) {
     font-size: 2.7rem;
@@ -72,8 +72,8 @@ h2 {
 
 h3 {
   font-size: 3.2rem;
-  font-family: "Noto Sans JP", "Mint Grotesk Bold", TazuganeInfoStdN-Heavy,
-    sans-serif;
+  font-family: "Mint Grotesk Bold", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 900;
 
   @media (max-width: 520px) {
     font-size: 1.8rem;
@@ -82,8 +82,8 @@ h3 {
 
 h4 {
   font-size: 1.5rem;
-  font-family: "Noto Sans JP", "Mint Grotesk Medium", TazuganeInfoStdN-Medium,
-    sans-serif;
+  font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 700;
 
   @media (max-width: 520px) {
     font-size: 1.4rem;
@@ -94,8 +94,8 @@ p,
 div,
 span {
   font-size: 1.2rem;
-  font-family: "Noto Sans JP", "Mint Grotesk Medium", TazuganeInfoStdN-Medium,
-    sans-serif;
+  font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
+  font-weight: 500;
 }
 
 ::selection {
