UI変更のテスト

--- a/components/obs/next/simple.scss
+++ b/components/obs/next/simple.scss
@@ -1,7 +1,7 @@
 // フォントの設定
-$next_regular: "Satoshi", "Noto Sans JP", sans-serif;
-$next_bold: "Satoshi", "Noto Sans JP", sans-serif;
-$next_black: "Satoshi", "Noto Sans JP", sans-serif;
+$next_regular: sans-serif;
+$next_bold: sans-serif;
+$next_black: sans-serif;
 
 .simple {
   // フォントの太さの設定（ライトウェイト）
